--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
-spring.datasource.password=secret
+spring.datasource.password=garvit@29
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
